--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
+    "react-rating-stars-component": "^2.2.0",
     "react-redux": "^7.2.6",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
@@ -42,6 +43,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }, 
-  "proxy":"http://localhost:8000/api"
+  },
+  "proxy": "http://localhost:8000/api"
 }
