--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.8",
+    "multer": "^1.4.4",
     "nodemon": "^2.0.15",
     "react-bootstrap": "^2.1.2",
     "react-redux": "^7.2.6",
